# ClientFactory

./: CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: OVERVIEW.md
examples/: wix.py
examples/tests/: test_wix.py
src/clientfactory/: __init__.py  __init__.pyi  builder.py  client.py  log.py
src/clientfactory/auth/: __init__.py  apikey.py  base.py  basic.py  dpop.py  jwt.py  oauth.py  session.py  token.py
src/clientfactory/backends/: __init__.py  algolia.py  base.py  graphql.py
src/clientfactory/cli/: __init__.py
src/clientfactory/client/: __init__.py  base.py  builder.py  config.py
src/clientfactory/clients/: __init__.py
src/clientfactory/core/: __init__.py  payload.py  request.py  resource.py  response.py  session.py
src/clientfactory/declarative/: __init__.py  base.py  client.py  decorators.py  resource.py
src/clientfactory/decorators/: __init__.py  auth.py  backend.py  client.py  method.py  payload.py  resource.py  session.py  transform.py  validation.py
temp/: rakutenlogs.md
tests/: __init__.py  conftest.py  test_auth_apikey.py  test_auth_base.py  test_auth_oauth.py  test_auth_session.py  test_builder.py  test_client.py  test_client_matmul.py  test_clients_managed_operations.py  test_clients_managed_resources.py  test_clients_search.py  test_param_map_matching.py  test_proxy_transform.py  test_rakuten_proxy.py  test_resources.py  test_resources_base_matmul.py  test_search_adapters.py  test_search_parameter_processing.py  test_session_base.py  test_session_persistent.py  test_transforms.py  test_utils_fileupload.py  test_utils_request.py  test_utils_requests_batch.py  test_utils_requests_chain.py  test_utils_requests_iterator.py  test_utils_response.py  test_utils_response_itemize.py
tests/auth/: __init__.py  conftest.py
tests/client/: conftest.py
tests/decorators/: __init__.py  conftest.py
tests/integration/: __init__.py  test_auth.py
tests/unit/: __init__.py
(+112 files in other folders)
