[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clientfactory"
version = "0.7.0"
description = "A framework for building API clients with minimal boilerplate"
readme = "README.md"
authors = [{name = "Joel Yisrael", email = "joel@highlyawear.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["api", "client", "rest", "http"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "requests-toolbelt>=0.9.1",
    "cryptography>=3.4.0",
    "loguru>=0.5.3",
    "typing-extensions>=4.0.0",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.20.9",
    "PyJWT>=2.0.0",
    "gql>=3.4.0",  # Added for GraphQL support
    "graphql-core>=3.2.0"  # Required by gql
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "pytest-mock>=3.0"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["clientfactory*"]  # package names should match these glob patterns (["*"] by default)
exclude = [
"examples*",
"docs*",
"tests*",
"OLD*",
"TODOLOG*",
".command",
"SSSAPI*"
]  # exclude packages matching these glob patterns (empty by default)

[project.urls]
Homepage = "https://github.com/schizoprada/clientfactory"
Documentation = "https://clientfactory.readthedocs.io/"
Repository = "https://github.com/schizoprada/clientfactory.git"
